[gd_scene load_steps=4 format=3 uid="uid://7l5y64gguvt8"]

[ext_resource type="Script" path="res://Shooting/projectile.gd" id="1_0bx1k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nywbw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r610b"]

[node name="Projectile" type="RigidBody2D"]
script = ExtResource("1_0bx1k")

[node name="ProjectileCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nywbw")

[node name="DeathTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ExplosionArea" type="Area2D" parent="."]
unique_name_in_owner = true
monitorable = false

[node name="ExplosionShape" type="CollisionShape2D" parent="ExplosionArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_r610b")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
